adding image upload for the doctor profile
